include $(top_srcdir)/common.mk

METASOURCES = AUTO
noinst_LTLIBRARIES = liboocdinterface.la

SUBDIRS =
DRIVERFILES =
liboocdinterface_la_LIBADD =

CLEANFILES =

BUILT_SOURCES =

BUILT_SOURCES +=
CLEANFILES +=

liboocdinterface_la_SOURCES = \
	interface_signal.c \
	interface_bitbang.c

noinst_HEADERS = \
	interface.h \
	interface_signal.h \
	interface_bitbang.h

EXTRA_DIST =

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
