include $(top_srcdir)/common.mk

METASOURCES = AUTO
noinst_LTLIBRARIES = liboocdinterface.la

SUBDIRS =
DRIVERFILES =
liboocdinterface_la_LIBADD =

CLEANFILES =

BUILT_SOURCES =

BUILT_SOURCES +=
CLEANFILES +=

liboocdinterface_la_SOURCES = \
	signal.c \
	bitbang.c

noinst_HEADERS = \
	interface.h \
	signal.h \
	bitbang.h

EXTRA_DIST =

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
