# SPDX-License-Identifier: GPL-2.0-or-later

noinst_LTLIBRARIES += %D%/libpld.la
%C%_libpld_la_SOURCES = \
	%D%/certus.c \
	%D%/ecp2_3.c \
	%D%/ecp5.c \
	%D%/efinix.c \
	%D%/gatemate.c \
	%D%/gowin.c \
	%D%/intel.c \
	%D%/lattice.c \
	%D%/lattice_bit.c \
	%D%/pld.c \
	%D%/raw_bit.c \
	%D%/xilinx_bit.c \
	%D%/virtex2.c \
	%D%/certus.h \
	%D%/ecp2_3.h \
	%D%/ecp5.h \
	%D%/lattice.h \
	%D%/lattice_bit.h \
	%D%/lattice_cmd.h \
	%D%/pld.h \
	%D%/raw_bit.h \
	%D%/xilinx_bit.h \
	%D%/virtex2.h
