# SPDX-License-Identifier: GPL-2.0-or-later

noinst_LTLIBRARIES += %D%/librtos.la
%C%_librtos_la_SOURCES = \
	%D%/rtos.c \
	%D%/rtos_standard_stackings.c \
	%D%/rtos_ecos_stackings.c  \
	%D%/rtos_chibios_stackings.c \
	%D%/rtos_embkernel_stackings.c \
	%D%/rtos_mqx_stackings.c \
	%D%/rtos_ucos_iii_stackings.c \
	%D%/rtos_riot_stackings.c \
	%D%/rtos_nuttx_stackings.c \
	%D%/freertos.c \
	%D%/threadx.c \
	%D%/ecos.c \
	%D%/linux.c \
	%D%/chibios.c \
	%D%/chromium-ec.c \
	%D%/embkernel.c \
	%D%/mqx.c \
	%D%/ucos_iii.c \
	%D%/nuttx.c \
	%D%/rtkernel.c \
	%D%/hwthread.c \
	%D%/zephyr.c \
	%D%/riot.c \
	%D%/rtos.h \
	%D%/rtos_standard_stackings.h \
	%D%/rtos_ecos_stackings.h \
	%D%/linux_header.h \
	%D%/rtos_chibios_stackings.h \
	%D%/rtos_embkernel_stackings.h \
	%D%/rtos_mqx_stackings.h \
	%D%/rtos_riot_stackings.h \
	%D%/rtos_ucos_iii_stackings.h \
	%D%/rtos_nuttx_stackings.h
