noinst_LTLIBRARIES += %D%/libserver.la
%C%_libserver_la_SOURCES = \
	%D%/server.c \
	%D%/telnet_server.c \
	%D%/gdb_server.c \
	%D%/server.h \
	%D%/telnet_server.h \
	%D%/gdb_server.h \
	%D%/tcl_server.c \
	%D%/tcl_server.h \
	%D%/rtt_server.c \
	%D%/rtt_server.h \
	%D%/ipdbg.c \
	%D%/ipdbg.h

STARTUP_TCL_SRCS += %D%/startup.tcl
